--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
     <title>Hello coursera</title>
   </head>
   <body>
-<<h4> this is the hello coursera</h4>
+<h4> Hello coursera </h4>
   </body>
 </html>
