My first web page.

--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Hello coursera</title>
   </head>
   <body>
-      <h4> Hello coursera </h4>
-        <<h3> this is the hello coursera </h3>
+        <h4> This is my first git web page!!... </h4>
   </body>
 </html>
