small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
         <h4> This is my first git web page!!... </h4>
+        <h6>It's a great work to learn git and web developments on coursera!!.</h6>
   </body>
 </html>
